<resources>
    <string name="app_name">CompraVenta</string>
    <string name="title">Título</string>
    <string name="description">Descripcion (opcional)</string>
    <string name="email">Correo de contacto</string>
    <string name="price">Precio</string>
    <string name="category">Categoría</string>
    <string name="SelectCat">Seleccione una categoria</string>
    <string name="discount">Ofrecer descuento de envio</string>
    <string name="inPerson">Retiro en persona</string>
    <string name="inPersonDirection">Direccion de retiro</string>
    <string name="terms">Aceptar terminos y condiciones</string>
    <string name="button">Publicar</string>
    <string name="titleHint">Título...</string>
    <string name="descriptionHint">Descripcion del producto...</string>
    <string name="emailHint">Correo electronico...</string>
    <string name="priceHint">Precio...</string>
    <string name="inPersonDirectionHint">Direccion de retiro...</string>

    <string-array name="categorias">
        <item>Seleccione una categoria</item>
        <item>INDUMENTARIA</item>
        <item>ELECTRONICA</item>
        <item>JARDIN</item>
        <item>VEHICULOS</item>
        <item>JUGUETES</item>
    </string-array>

</resources>