<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />
                <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minHeight="48dp"
                android:inputType="text"
                android:hint="@string/titleHint"
                />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                />

                <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:hint="@string/descriptionHint"
                />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                />
                <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minHeight="48dp"
                android:inputType="textEmailAddress"
                android:hint="@string/emailHint" />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                />
                <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minHeight="48dp"
                android:inputType="numberDecimal"
                android:hint="@string/priceHint" />
                <TextView
                android:id="@+id/textoCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                />

                <Button
                    android:id="@+id/buttonCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SelectCat" />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                />

                <Switch
                android:id="@+id/switchDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />
                <SeekBar
                android:id="@+id/sliderDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inPerson"
                />

                <CheckBox
                android:id="@+id/checkboxInPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inPersonDirection"
                android:visibility="gone"
                />
                <EditText
                android:id="@+id/editInPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minHeight="48dp"
                android:inputType="text"
                android:hint="@string/inPersonDirectionHint"
                android:visibility="gone"
                />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                />

                <CheckBox
                android:id="@+id/checkboxTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />
                <Button
                android:id="@+id/buttonPublish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                />
            </LinearLayout>
        </ScrollView>
</LinearLayout>